tests/ui/const-generics/generic-const-array-pattern-ice-139815.stderr
error: overly complex generic constant
  --> $DIR/generic-const-array-pattern-ice-139815.rs:6:14
   |
LL |       x: [u32; {
   |  ______________^
LL | |
LL | |         N + 1;
LL | |         5
LL | |     }],
   | |_____^ blocks are not supported in generic constants
   |
   = help: consider moving this anonymous constant into a `const` function
   = note: this operation may be supported in the future

error: aborting due to 1 previous error

